# SDP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  arucoDetection.cpp  cameraCalibration  main.cpp  robot_controller.bash  run_project.bash  run_project_node.bash  systemCalibration.py  test.bash
JetsonNano_code/: main.cpp
LinearRegression/: LR.py  systemCalibration.ipynb  systemCalibration.json
Loclization/: CMakeLists.txt  localization.cpp  localization.h  main.cpp  main.cpp.save
Loclization/Loclization/: CMakeLists.txt  localization.cpp  localization.h
Loclization/RobotVision/: aruco_scanner.cpp  aruco_scanner.h  opencv_constants.cpp  opencv_constants.h
Loclization/RobotVision/CameraCalibration/: pose_collection.h
Loclization/RobotVision/Map/: map.h  map_viewer.cpp  map_viewer.h
RobotController/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
RobotController/devel/lib/PathPlanning/: TrajectoryGen
RobotController/devel/lib/localaization/: localaization_node
RobotController/devel/lib/navgation/: navgation_node
RobotController/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  localaization.pc  navgation.pc  userInput.pc
RobotController/devel/lib/userInput/: userInput_node
RobotController/logs/PathPlanning/: build.cmake.000.log.stderr
RobotController/logs/navgation/: build.cmake.000.log.stderr
RobotController/logs/userInput/: build.cmake.000.log.stderr
RobotController/src/: CMakeLists.txt
RobotController/src/OBJ_D/: CMakeLists.txt  package.xml
RobotController/src/OBJ_D/src/: main.cpp
RobotController/src/PathPlanning/: CMakeLists.txt  package.xml
RobotController/src/PathPlanning/src/: TrajectoryGen (copy).cpp  TrajectoryGen.cpp  test.cpp
RobotController/src/localaization/: CMakeLists.txt
RobotController/src/localaization/src/: localization.cpp
RobotController/src/localization/: CMakeLists.txt  package.xml
RobotController/src/localization/src/: CMakePresets.json  main.cpp
RobotController/src/localization/src/Loclization/: CMakeLists.txt  localization.cpp  localization.h
RobotController/src/localization/src/RobotVision/: CMakeLists.txt  aruco_scanner.cpp  opencv_constants.cpp
RobotController/src/localization/src/RobotVision/Map/: map_creator.h  map_viewer.cpp
RobotController/src/navgation/: CMakeLists.txt  package.xml
RobotController/src/navgation/src/: a_star.cpp  map.cpp  map.h  map_creator.cpp  map_creator.h  map_viewer.cpp  map_viewer.h  navigate.cpp
RobotController/src/navigation/: CMakeLists.txt  package.xml
RobotController/src/navigation/include/: Robot_controller.h  map.h  map_creator.h  navigation.h
RobotController/src/navigation/src/: Robot_controller.cpp  a_star.cpp  main.cpp  map.cpp  map_creator.cpp  map_viewer.cpp  navigate.cpp  (+1 more)
RobotController/src/team05_keyboard_teleop/: CMakeLists.txt  package.xml
RobotController/src/userInput/: CMakeLists.txt  package.xml
RobotVision/: CMakeLists.txt  aruco_gnerator.cpp  aruco_gnerator.h  aruco_scanner.cpp  aruco_scanner.h  main.cpp  map.cpp  opencv_constants.cpp  opencv_constants.h
RobotVision/CameraCalibration/: CMakeLists.txt  camera_calibration.cpp  camera_calibration.h  pose_collection.cpp  pose_collection.h
RobotVision/Map/: CMakeLists.txt  a_star.cpp  map.cpp  map.h  map_creator.cpp  map_creator.h  map_scanner.cpp  map_scanner.h
RopotVision/: CMakeLists.txt  cameraCalibration  main.cpp  map.cpp
objectDetection/: CMakeLists.txt  main.cpp
(+3 files in other folders)
